# autocar

./: README.md  gps
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/iahrs_driver/: iahrs_driver
devel/lib/mapviz/: mapviz
devel/lib/multires_image/: mapviz_tile_loader  multires_view_node
devel/lib/pkgconfig/: iahrs_driver.pc  l2y_package.pc  mapviz.pc  mapviz_plugins.pc  motor_control.pc  multires_image.pc  ntrip_ros.pc  rtcm_msgs.pc  sensor_fusion.pc  tile_map.pc  ublox_gps.pc  ublox_msg_filters.pc  ublox_msgs.pc  ublox_serialization.pc
devel/lib/sensor_fusion/: path.py  sensor_fusion_node.py
src/: 2024-10-03-15-33-37.bag.active
src/l2y_package/: CMakeLists.txt
src/motor_control/: CMakeLists.txt  package.xml
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/bagfiles/: waypoint_1.bag  waypoint_10.bag  waypoint_11.bag  waypoint_12.bag  waypoint_13.bag  waypoint_14.bag  waypoint_15.bag  waypoint_16.bag  waypoint_17.bag  waypoint_18.bag  waypoint_19.bag  waypoint_2.bag  waypoint_20.bag  waypoint_21.bag  waypoint_22.bag  waypoint_23.bag  waypoint_24.bag  waypoint_25.bag  waypoint_27.bag  waypoint_28.bag  waypoint_29.bag  waypoint_3.bag  waypoint_30.bag  waypoint_31.bag  waypoint_32.bag  waypoint_33.bag  waypoint_34.bag  waypoint_35.bag  waypoint_36.bag  waypoint_37.bag  waypoint_38.bag  waypoint_39.bag  waypoint_40.bag  waypoint_41.bag  waypoint_42.bag  waypoint_43.bag  waypoint_44.bag  waypoint_45.bag  waypoint_46.bag  waypoint_47.bag  (+23 more)
src/sensor_fusion/config/: b.bag  gps_data.csv  imu_data.csv  mapviz.yaml  waypoints.csv
src/sensor_fusion/config/r/: 2024-10-03-15-34-42.bag  2024-10-05-15-41-44.bag.active  gps_data.csv  waypoints.csv
src/sensor_fusion/launch/: app_hough_drive.launch  path.launch  sensor.launch
src/sensor_fusion/scripts/: app_hough_drive.py  path.py  path_save.py  sensor_fusion_node.py  waypoint.py
(+46 files in other folders)
