<package format="2">
  <name>sensor_fusion</name>
  <version>0.0.0</version>
  <description>The sensor_fusion package</description>
  
  <maintainer email="l2y@todo.todo">l2y</maintainer>
  <license>MIT</license> <!-- 라이센스 추가 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <!-- 여기에 필요한 추가 설정이 있을 경우 추가 -->
  </export>
</package>

